# mcp-datetime

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_ja.md  pyproject.toml
src/mcp_datetime/: __init__.py  __main__.py  server.py
