[project]
name = "mcp-datetime"
version = "0.1.1"
description = "A MCP server for datetime formatting and file name generation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["mcp>=1.1.1"]
license = "MIT"
keywords = ["claude", "mcp", "datetime", "time", "format", "timezone"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[[project.authors]]
name = "ZeparHyfar"
email = "zeparhyfar@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-datetime = "mcp_datetime:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pylint>=3.0.3",
]

[project.urls]
Repository = "https://github.com/ZeparHyfar/mcp-datetime.git"
